--- a/src/i18n/messages/ko.json
+++ b/src/i18n/messages/ko.json
@@ -302,6 +302,7 @@
   },
   "sidebar": {
     "dashboard": "대시보드",
+    "tutorial": "튜토리얼",
     "apiKeys": "API 키",
     "profile": "프로필",
     "billing": "결제",
@@ -514,29 +515,26 @@
   },
   "tutorial": {
     "title": "서비스 시작하기",
-    "subtitle": "AI 기반 개발 도구 사용을 시작하기 위한 5가지 간단한 단계를 따르세요",
+    "subtitle": "AI 기반 개발 도구 사용을 시작하기 위한 4가지 간단한 단계를 따르세요",
     "steps": {
       "title": "설정 단계"
     },
     "step1": {
       "title": "빠른 시작 가이드",
-      "description": "Node.js 18.0.0 이상을 설치하고 OpenAI Codex CLI 도구를 전역적으로 설치하세요. 몇 분 만에 설정을 완료하고 OpenAI의 Codex API에 접근하세요.\n\n전제 조건:\n• Node.js - Node.js 버전 18.0.0 이상 설치\n  node --version (v18.0.0 이상)\n• OpenAI Codex CLI - OpenAI Codex CLI 도구를 전역적으로 설치\n  npm install -g @openai/codex"
-    },
-    "step2": {
-      "title": "API 키로 테스트",
-      "description": "테스트 API 키를 사용하여 모든 것이 올바르게 작동하는지 확인하고 첫 번째 API 호출 방법을 학습하세요"
+      "description": "Node.js 18.0.0 이상과 OpenAI Codex CLI 도구를 전역 설치하세요.\n\n전제 조건:\n• Node.js - 18.0.0 이상 버전 설치\n  node --version (v18.0.0 이상)\n• OpenAI Codex CLI - OpenAI Codex CLI 도구 전역 설치\n  npm install -g @openai/codex"
     },
     "step3": {
       "title": "플랜 구독",
-      "description": "요구사항에 가장 적합한 구독 플랜을 선택하고 결제 프로세스를 완료하여 전체 기능을 잠금 해제하세요"
+      "description": "필요에 맞는 플랜을 선택하고 결제를 완료하여 모든 기능을 사용하세요",
+      "button": "구독하기"
     },
     "step4": {
       "title": "API 생성",
-      "description": "API 키를 생성하고 서비스를 개발 워크플로우에 통합하는 방법을 학습하세요"
+      "description": "API Keys 페이지에서 API 키를 생성하세요"
     },
     "step5": {
-      "title": "구축 시작",
-      "description": "AI 도구를 사용하여 개발 프로세스를 가속화하고 새로운 가능성을 열어보세요"
+      "title": "바로 사용하기",
+      "description": "AI 도구로 첫 번째 작업을 빠르게 완료하세요"
     },
     "help": {
       "title": "도움이 필요하신가요?",
